* (bug 25248) API: paraminfo errors with certain modules
* (bug 25303) Fix API parameter integer validation to actually enforce validation
  on the input values in addition to giving a warning. Also add flag to enforce (die)
  if integer out of range (breaking change!)
* (bug 24792) API help for action=purge sometimes wrongly stated whether a
  POST request was needed due to cache pollution

=== Languages updated in 1.17 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Moroccan Spoken Arabic (ary) (new)
* Banjar (bjn) (new)
* Danish (dk) (removed deprecated language code)
* Fiji Hindi (Devangari script) (removed)
* Kabardian (kdb) (new, dummy)
* Kabardian (Cyrillic) (kbd-cyrl) (new)
* Latgalian (ltg) (new)
* Minangkabau (min) (new)
* Dutch (informal) (nl-informal) (new)
* Rusyn (rue) (new)

* (bug 23156) Commafy and search normalization updated for Belarusian
  (Taraškievica).
* (bug 23283) Native name for Old English -> Ænglisc.
* (bug 23364) Native name for Azerbaijani -> Azərbaycanca.
* (bug 24593) Native name for Sorani now uses only Arabic script.
* (bug 24628) Generic translations for NS_USER/NS_USER_TALK for Esperanto.
* (bug 24917) Polish as fallback for Kashubia.
* (bug 24794) Tatar link trail updated.

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer
supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.17 has several database changes since 1.16, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.
